--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,5 +35,10 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.4.1",
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.45",
+    "tailwindcss": "^3.4.10"
+  }
 }
