chore(frontend): restructure frontend to be child of API

--- a/backend/client/.gitignore
+++ b/backend/client/.gitignore
@@ -5,6 +5,9 @@
 /.pnp
 .pnp.js
 .yarn/*
+!.yarn/releases
+!.yarn/plugins
+.pnp.*
 
 
 # testing
@@ -23,3 +26,4 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
