--- a/backend/client/package.json
+++ b/backend/client/package.json
@@ -15,13 +15,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "eject": "react-scripts eject",
+    "check": "biome check .",
+    "format": "biome format ."
   },
   "browserslist": {
     "production": [
@@ -35,5 +31,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.4.1",
+  "devDependencies": {
+    "biome": "^0.3.3"
+  }
 }
